Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19405

Memory leak in color picker due to CreateRectRgnIndirect, and in Text/Listview/Treeview controls due to CreateRectRgn

    XMLWordPrintable

Details

    Description

      reactos-bootcd-0.4.15-dev-7322-g3558b7b-x86-gcc-lin-dbg

      While investigating CORE-19403, it seems that ReactOS misses this Wine commit https://github.com/wine-mirror/wine/commit/665fa81a511f94f97b62f074959e07a25ea7d307 fixing a memory leak related to the use of CreateRectRgnIndirect

      MSDN : https://learn.microsoft.com/en-us/windows/win32/api/wingdi/nf-wingdi-createrectrgnindirect : "When you no longer need the HRGN object, call the DeleteObject function to delete it." => Actually never deleted in https://git.reactos.org/?p=reactos.git;a=blob;f=dll/win32/comdlg32/colordlg.c;hb=f380a5104034604de6a8ca3d7b90a15a459e894b#l535 

      Patch : colordlgleak.patch

      Same bug in Comctl32's edit / listview/treeview due to missing : https://github.com/wine-mirror/wine/commit/a8502312c60fe9fe0bd2aec78553b78325832e11 

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              KRosUser KRosUser
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: