[COMCTL32][USER32] EDIT & ListView & TreeView: Fix HRGN leaks (#6268)

Based on KRosUser's memleak_comctl32.patch.
JIRA issue: CORE-19405
Fix HRGN handle leaks.